--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
+    "vuetify-loader": "^1.3.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "browserslist": [
     "> 1%",
