--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.817.0",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
