--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aws-sdk": "^2.817.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
+    "jw-vue-pagination": "^1.0.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
