--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jw-vue-pagination": "^1.0.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-tel-input-vuetify": "^1.2.16",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
