--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.0.0",
     "jw-vue-pagination": "^1.0.3",
     "vue": "^2.6.11",
+    "vue-phone-number-input": "^1.1.10",
     "vue-router": "^3.2.0",
     "vue-tel-input-vuetify": "^1.2.16",
     "vuetify": "^2.2.11",
