--- a/package.json
+++ b/package.json
@@ -8,41 +8,29 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
+    "aws-sdk": "^2.817.0",
+    "axios": "^0.21.1",
+    "bcrypt": "^5.0.0",
+    "jw-vue-pagination": "^1.0.3",
     "vue": "^2.6.11",
     "vue-phone-number-input": "^1.1.10",
     "vue-router": "^3.2.0",
+    "vue-tel-input-vuetify": "^1.2.16",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
+    "vuetify-loader": "^1.3.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "browserslist": [
     "> 1%",
