--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.6.11",
     "vue-ellipse-progress": "^1.3.0",
     "vue-phone-number-input": "^1.1.10",
+    "vue-read-more": "^1.1.1",
     "vue-router": "^3.2.0",
     "vue-tel-input-vuetify": "^1.2.16",
     "vuetify": "^2.2.11",
