--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-phone-number-input": "^1.1.10",
     "vue-read-more": "^1.1.1",
     "vue-router": "^3.2.0",
+    "vue-social-sharing": "^3.0.7",
     "vue-tel-input-vuetify": "^1.2.16",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
