--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aws-sdk": "^2.817.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
+    "epic-spinners": "^1.1.0",
     "jw-vue-pagination": "^1.0.3",
     "vue": "^2.6.11",
     "vue-ellipse-progress": "^1.3.0",
