--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-router": "^3.2.0",
     "vue-social-sharing": "^3.0.7",
     "vue-tel-input-vuetify": "^1.2.16",
+    "vue-typed-js": "^0.1.2",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
